Image Gap Problem Solved

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     background-color:C2D7EF;
-    font-family: 'Baloo Bhai 2', sans-serif;
+    /* font-family: 'Baloo Bhai 2', sans-serif; */
     }
 .zoom,.nav-list li a{
     transition: transform 0.3s ease-in-out;
